# unixcmd

./: CMakeLists.txt  conanfile.py  main.cpp
android/: AndroidManifest.xml
android/src/app/unixcmd/: QnActivity.java
ios/: Info.plist
qml/: main.qml
src/: DirectoryView.cpp  DirectoryView.h  DirectoryViewModel.cpp  DirectoryViewModel.h  DirectoryWorker.cpp  DirectoryWorker.h  UnixCmdWindow.cpp  UnixCmdWindow.h
